# sauron

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: arquitetura.md  instalacao.md  metricas.md  uso.md
sauron/: __init__.py  main.py  models.py
sauron/analyzers/: code_analyzer.py  git_analyzer.py  github_analyzer.py  hotspot_detector.py
sauron/reporters/: chart_reporter.py  file_reporter.py  terminal_reporter.py
tests/: test_analyzers.py  test_chart_reporter.py  test_code_analyzer.py  test_git_analyzer.py  test_github_analyzer.py  test_models.py
